# ValueBench

./: .gitignore  GUI_README.md  README.md  UV_README.md  app.py  embedding_utils.py  example_cli.py  generate_embeddings.py  generator.py  prompt_manager.py  pyproject.toml  requirements.txt  rubric_models.py  sample_output.txt  seed.txt  test.py  test_integration.py  unified_ethics_cases.json  utils.py
config/: generator.yaml
credentials/: .gitkeep
data/cases/: case_0075b71f-ec8f-4884-8297-5119de2e4b0e_a86abbf6ec41.json  case_0088dc0c-2b25-4b35-890e-e3dd4259aefb_2025-12-22_00-29-03.json  case_01ef4462-ce9b-4e56-8ca1-60fa83dcc84d_00053ce69f45.json  case_01f718a7-d2dc-46ce-b1a9-383552fb8af6_bdb9203571b3.json  case_026cd494-f2d2-45b9-a486-a9da7efed755_ca106b3bc125.json  case_02890136-f5aa-4e20-928e-9e276dbe5508_2025-12-22_00-26-03.json  case_029c78f6-6222-4cbc-a361-0e353d74c345_c453c52f40f6.json  case_03044c80-2c0f-4a34-9dfd-2d3801c5539f_2132e2e5cb4d.json  case_03331fd3-3fa6-4e90-bba3-db0d045dfe31_2025-12-22_01-01-33.json  case_0368b6e3-e09b-4980-862e-89862c09b0fd_2025-12-22_00-52-33.json  case_03e8c90f-45bf-400a-adfe-1068a9f6fa4e_467d2e0aeaea.json  case_0468643b-0d9e-4cef-be9a-0135cb76ab44_2025-12-22_01-11-49.json  case_04e1401b-a5b1-4d5b-8816-0d3a90dfd11a_1e3c5073f220.json  case_0529753b-fe34-40fb-aea4-9b8baf58bb7a_b9de1aa64561.json  case_05467af7-7001-422a-8c34-bc8d29dc06e5_7ebe96db4c85.json  case_0589f632-4ad2-472d-98c7-cd07a37f42d1_ca5126c6ab62.json  case_05c9fc73-9535-4caf-a798-7f2a005f5232_46e6524af5cf.json  case_06470e3b-b403-4cd3-897c-82b13f7ef1f0_735d1aa45496.json  case_065d7abf-3671-43a2-8375-79fb6e87ed78_62af962b0f80.json  case_06d99d71-daaf-4047-bab0-8d4c1abf6412_090e93a00e13.json  case_07950ff2-a7f8-404e-9b71-4b914bed0dad_9725e770638f.json  (+470 more)
docs/: value_validation.md
example/: pyproject.toml
response_models/: feasibility.py
src/: __init__.py  case_loader.py  draft_run.py  evaluation_store.py  generate_all_literature.py  generator.py  pdf_extractor.py  prompt_manager.py  run_llm_evaluation.py  utils.py
tests/: test_jsd.py  test_value_validator.py
viewer/: __init__.py  app.py  start.py
(+673 files in other folders)
