[project]
name = "valuebench"
version = "0.1.0"
description = "Medical ethics case review system"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.0.0",
    "all-the-llms",
    "hydra-core",
    "omegaconf",
    "python-dotenv",
    "tqdm",
    "jinja2",
    "gradio>=6.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
valuebench = "example_cli:simple_cli_demo"
valuebench-gui = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.workspace]
members = [
    "example",
]

[dependency-groups]
dev = []

