[project]
name = "valuebench"
version = "0.1.0"
description = "Medical ethics case review system"
requires-python = ">=3.9.2,<3.14"
dependencies = [
    "pydantic>=2.0.0",
    "all-the-llms",
    "hydra-core",
    "omegaconf",
    "python-dotenv",
    "tqdm",
    "jinja2",
    "flask>=3.1.2",
    "scikit-learn>=1.6.1",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
]

[project.scripts]
valuebench = "example_cli:simple_cli_demo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.workspace]
members = [
    "example",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

